[package]
name = "ravenx-url"
version = "1.3.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.96"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "macros", "chrono", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.5.0"
rand = { version = "0.9.0", features = ["thread_rng"] }
lazy_static = "1.5.0"
toml = "0.8.20"
serde_yaml = "0.9.34"
clap = { version = "4.5.30", features = ["derive"] }
redis = "0.29.0"
serde_json = "1.0.139"
