[package]
name = "ravenx-url"
version = "1.4.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.96"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres", "macros", "chrono", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.15.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
sha256 = "1.6.0"
rand = { version = "0.9.0", features = ["thread_rng"] }
lazy_static = "1.5.0"
toml = "0.8.20"
serde_yaml = "0.9.34"
clap = { version = "4.5.31", features = ["derive"] }
redis = "0.29.1"
serde_json = "1.0.139"
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.28.0", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.28.0", features = ["semconv_experimental"] }
tracing-core = "0.1.33"
tracing-opentelemetry = "0.29.0"
opentelemetry-stdout = "0.28.0"